# huma-example-underwriter

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  docker-compose-ci.yml  pyproject.toml
.github/workflows/: cd.yml  ci.yml
terraform/: ecs.tf  init.tf  network.tf  variables.tf
tests/: conftest.py  test_underwriter.py
tests/api/: test_exception_handlers.py
tests/api/e2e/: test_api.py
tests/domain/: test_rules.py  test_underwriter.py
tests/fixtures/: model_factories.py
tests/fixtures/vcr_cassettes/api/e2e/api/: approve.yml  approve_error.yml
tests/helpers/: api_test_helpers.py
underwriter/: main.py  models.py  settings.py
underwriter/api/: exception_handlers.py  instrumentation.py  main.py  views.py
underwriter/core/: models.py  underwriter.py  views.py
underwriter/domain/: rules.py  services.py  underwriter.py
