[tool.poetry]
name = "huma-underwriter-eth-txns"
version = "0.1.0"
description = ""
authors = ["Lei Du <lei@huma.finance>"]

[tool.poetry.dependencies]
python = "^3.10"
structlog = "^22.3.0"
fastapi = "^0.88.0"
uvicorn = "^0.20.0"
python-dotenv = "^0.21.0"


[tool.poetry.group.dev.dependencies]
autoflake = "^2.0.0"
black = "^22.10.0"
pytest = "^7.2.0"
pytest-describe = "^2.0.1"
isort = "^5.10.1"
flake8 = "^6.0.0"

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 120

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
